Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32324

QTC_RUNNABLE can't run CMAke COMMAND targets

XMLWordPrintable

    • 5537a102e (16.0)

      Documentations says that 
      set_target_properties(main_executable PROPERTIES FOLDER "qtc_runnable")
      can be used to set the main executable, but that does not work
      if the target is not an executable but rather a target with a shell COMMAND.

      The use case is that I'm developing a Qt Plugin that is run by an external application, imagine creating a plugin for QtCreator, so you add_custom_target(run_qtcreator COMMAND qtcreator --plugin <TARGET_FILE:my_qtc_plugin> ....)

      Now it would be really nice to have CTRL + R run it, but as of now I need to add the custom executable myself which is a pain because if I chose another Qt KIT I need to add that again, whereas in CMake that would be permanent.

      Can you extend this feature?

        For Gerrit Dashboard: QTCREATORBUG-32324
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            dantti Daniel Nicoletti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes