CMakePM: Add runers for custom targets marked as qtc_runnable

Sometimes we need to have the ability to run in Qt Creator a task that
is defined in CMake code.

For example you can have a Qt Creator plugin, which is a shared library,
and you want to start Qt Creator loading the plugin.

The following code will work now:

```
add_custom_target(run COMMAND ${CMAKE_COMMAND} -E echo "Hello World from
CMake")
set_target_properties(run PROPERTIES FOLDER "qtc_runnable")
```

Fixes: QTCREATORBUG-32324
Change-Id: Iba0169b6402a7974c011bd2c58e40b83dfb9857c
Reviewed-by: Eike Ziller <eike.ziller@qt.io>